--- a/.github/workflows/simpleTest_go.yml
+++ b/.github/workflows/simpleTest_go.yml
@@ -36,6 +36,12 @@ jobs:
           chmod +x $HOME/bin/*
           echo "$HOME/bin" >> $GITHUB_PATH
 
+      - name: Set up Go 1.21
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.21
+
+
       - name: Install Geth
         uses: gacts/install-geth-tools@v1
         with:
