--- a/.github/workflows/e2e_test_go.yml
+++ b/.github/workflows/e2e_test_go.yml
@@ -36,6 +36,11 @@ jobs:
           chmod +x $HOME/bin/*
           echo "$HOME/bin" >> $GITHUB_PATH
 
+      - name: Set up Go 1.21
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.21
+
       - name: Install Geth
         uses: gacts/install-geth-tools@v1
         with:
@@ -62,7 +67,7 @@ jobs:
           make install-geth
           make cannon-prestate
           make devnet-allocs
-          cd e2e
+          cd op-e2e
           make test_go
-          continue-on-error: true
+        continue-on-error: true
 
