OR-1392 e2e test error correction

--- a/.github/workflows/e2e_test_go.yml
+++ b/.github/workflows/e2e_test_go.yml
@@ -68,6 +68,6 @@ jobs:
           make cannon-prestate
           make devnet-allocs
           cd op-e2e
-          make test_go
+          make test
         continue-on-error: true
 
