--- a/.github/workflows/geth-test_go.yml
+++ b/.github/workflows/geth-test_go.yml
@@ -1,9 +1,9 @@
 name: geth unit tests
-on:
-  push:
-    paths:
-      - 'op-node/**'
-      - 'packages/tokamak/contracts-bedrock/**'
+on: push
+  # push:
+  #   paths:
+  #     - 'op-node/**'
+  #     - 'packages/tokamak/contracts-bedrock/**'
 
 jobs:
   env-setting:
