--- a/.github/workflows/e2e_test_go.yml
+++ b/.github/workflows/e2e_test_go.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   env-setting:
-    name: run test_go
+    name: run e2e test_go
     runs-on: ubuntu-latest
 
     steps:
@@ -68,6 +68,6 @@ jobs:
           make cannon-prestate
           make devnet-allocs
           cd op-e2e
-          go test -v ./...
+          make test-http
         continue-on-error: true
 
