OR-1392 make user-test_go

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,7 @@ name: pnpm-monorepo
 on:
   push:
     paths:
-      - 'op-chain-ops/**'
-      - 'packages/**'
+      - 'ufm-test-services'
 jobs:
   pnpm-monorepo:
     runs-on: ubuntu-latest
