--- a/.github/workflows/e2e_test_go.yml
+++ b/.github/workflows/e2e_test_go.yml
@@ -1,8 +1,8 @@
 name: e2e test_go
 on:
-   push:
-     paths:
-       - '**'
+  push:
+    paths:
+      - 'ufm-test-services'
 
 jobs:
   env-setting:
