--- a/op-e2e/Makefile
+++ b/op-e2e/Makefile
@@ -52,7 +52,6 @@ clean:
 	rm -r ../op-program/bin
 .PHONY: clean
 
-
 test-user:
-	$(go_test) $(go_test_flags) ./actions/user.go ./actions/user_test.go
+	$(go_test) $(go_test_flags) ./actions/user.go ./e2eutils/... ./actions/user_test.go
 .PHONY: test-user
