--- a/op-e2e/Makefile
+++ b/op-e2e/Makefile
@@ -53,5 +53,6 @@ clean:
 .PHONY: clean
 
 test-user:
-	$(go_test) $(go_test_flags) -run TestCrossLayerUser ./actions
+	$(go_test) $(go_test_flags) -run 'TestCrossLayerUser|runCrossLayerUserTest' ./actions
 .PHONY: test-user
+
