OR-1392 -run 'TestCrossLayerUser|runCrossLayerUserTest' ./op-e2e/actions

--- a/op-e2e/Makefile
+++ b/op-e2e/Makefile
@@ -53,6 +53,6 @@ clean:
 .PHONY: clean
 
 test-user:
-	$(go_test) $(go_test_flags) -run 'TestCrossLayerUser ./actions
+	$(go_test) $(go_test_flags) -run TestCrossLayerUser ./actions
 .PHONY: test-user
 
