--- a/.github/workflows/slither-analysis.yml
+++ b/.github/workflows/slither-analysis.yml
@@ -38,7 +38,9 @@ jobs:
       - name: Install Dependencies
         # only install dependencies if there was a change in the deps
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn install
+        run: |
+          npm i -g pnpm
+          pnpm install
 
       - name: Build
         run: yarn build
