--- a/.github/workflows/slither-analysis.yml
+++ b/.github/workflows/slither-analysis.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install Dependencies
         # only install dependencies if there was a change in the deps
-        # if: steps.yarn-cache.outputs.cache-hit != 'true'
+        if: steps.pnpm-cache.outputs.cache-hit != 'true'
         run: |
           npm i -g pnpm
           pnpm install
