OR-1392 run slither:slither.sh-slither.config.json

--- a/.github/workflows/slither-analysis.yml
+++ b/.github/workflows/slither-analysis.yml
@@ -70,7 +70,10 @@ jobs:
       - name: Run analysis
         working-directory: ./packages/tokamak/contracts-bedrock
         run: |
-          cp test/LivenessGuard.t.sol test/LivenessGuard.t.sol.bak
-          sed -i '/function _initializeSafeTools/,/}/ s/^/\/\//' test/LivenessGuard.t.sol
-          pnpm slither
-          mv test/LivenessGuard.t.sol.bak test/LivenessGuard.t.sol
+         cp test/LivenessGuard.t.sol test/LivenessGuard.t.sol.bak
+         cp test/safe-tools/SafeTestTools.sol test/safe-tools/SafeTestTools.sol.bak
+         sed -i '/function _initializeSafeTools/,/}/ s/^/\/\//' test/LivenessGuard.t.sol
+         sed -i '/function _initializeSafeTools/,/}/ s/^/\/\//' test/safe-tools/SafeTestTools.sol
+         pnpm slither
+         mv test/LivenessGuard.t.sol.bak test/LivenessGuard.t.sol
+         mv test/safe-tools/SafeTestTools.sol.bak test/safe-tools/SafeTestTools.sol
