OR-1392 filter LivenessGuard contract

--- a/packages/tokamak/contracts-bedrock/slither.config.json
+++ b/packages/tokamak/contracts-bedrock/slither.config.json
@@ -6,5 +6,6 @@
   "exclude_optimization": true,
   "fail_on": "none",
   "filter_paths": "(src/vendor|src/cannon/MIPS.sol|src/EAS/EAS.sol)",
-  "foundry_out_directory": "artifacts"
+  "foundry_out_directory": "artifacts",
+  "filter_contracts": ["LivenessGuard_TestInit"]
 }
