--- a/packages/tokamak/contracts-bedrock/slither.config.json
+++ b/packages/tokamak/contracts-bedrock/slither.config.json
@@ -5,7 +5,6 @@
   "exclude_low": true,
   "exclude_optimization": true,
   "fail_on": "none",
-  "filter_paths": "(src/vendor|src/cannon/MIPS.sol|src/EAS/EAS.sol)",
-  "foundry_out_directory": "artifacts",
-  "filter_contracts": ["LivenessGuard_TestInit"]
+  "filter_paths": "(src/vendor|src/cannon/MIPS.sol|src/EAS/EAS.sol|test/LivenessGuard.t.sol|scripts/libraries/LibSort.sol)",
+  "foundry_out_directory": "artifacts"
 }
