--- a/.github/workflows/slither-analysis.yml
+++ b/.github/workflows/slither-analysis.yml
@@ -64,6 +64,12 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Install solc
+        run: |
+          wget https://github.com/ethereum/solidity/releases/download/v0.8.15/solc-static-linux
+          chmod +x solc-static-linux
+          sudo mv solc-static-linux /usr/bin/solc
+
       - name: Install Slither
         run: pip3 install slither-analyzer
 
