--- a/.github/workflows/slither-analysis.yml
+++ b/.github/workflows/slither-analysis.yml
@@ -64,19 +64,16 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install solc
+      - name: Install solc-select and solc
         run: |
-          wget https://github.com/ethereum/solidity/releases/download/v0.8.15/solc-static-linux
-          chmod +x solc-static-linux
-          sudo mv solc-static-linux /usr/bin/solc
+          pip3 install solc-select
+          solc-select install 0.8.15
+          solc-select use 0.8.15
 
       - name: Install Slither
         run: pip3 install slither-analyzer
 
-      - name: Set solc version and Run analysis  # solc 버전을 설정하고 분석을 실행합니다.
+      - name: Run analysis
         working-directory: ./packages/tokamak/contracts-bedrock
-        run: |
-          export SOLC_VERSION=0.8.15  # SOLC_VERSION 환경 변수를 설정합니다.
-          slither src/L1  # 분석을 실행합니다.
-        continue-on-error: true  # 오류 발생 시에도 계속 진행합니다.
-
+        run: slither src/L1
+        continue-on-error: true
