--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -3,7 +3,7 @@ name: slither analysis
 on:
   push:
     paths:
-      - 'ufm-test-services'
+      - '**'
 
 env:
   PYTEST_ADDOPTS: "--color=yes"
@@ -73,7 +73,25 @@ jobs:
       - name: Install Slither
         run: pip3 install slither-analyzer
 
-      - name: Run analysis
-        working-directory: ./packages/tokamak/contracts-bedrock
-        run: slither src/L1
-        continue-on-error: true
+      - name: Run Slither
+        uses: crytic/slither-action@v0.3.1
+        id: slither
+        with:
+          target: packages/tokamak/contracts-bedrock
+          slither-config: packages/tokamak/contracts-bedrock/slither.config.json
+          fail-on: config
+          slither-version: dev-triage-db
+          slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
+
+
+
+
+
+
+
+
+
+
+
+
+
