--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
 
-      - name: Install Yarn
-        run: npm install --global y
+      - name: Update npm
+        run: npm install -g npm@latest
 
       - name: Copy foundry from Docker container
         run: |
@@ -54,7 +54,8 @@ jobs:
         # only install dependencies if there was a change in the deps
         if: steps.pnpm-cache.outputs.cache-hit != 'true'
         run: |
-          npm i -g pnpm
+          npm install -g pnpm@latest
+          cd packages/tokamak/contracts-bedrock
           pnpm install
 
       - name: Build
