--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -79,17 +79,13 @@ jobs:
         uses: crytic/slither-action@v0.3.1
         id: slither
         with:
-          target: packages/tokamak/contracts-bedrock
+          target: packages/tokamak/contracts-bedrock/src/L1
           slither-config: packages/tokamak/contracts-bedrock/slither.config.json
           fail-on: config
           slither-version: dev-triage-db
           slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
           ignore-compile: true
-
-
-
-
-
+          continue-on-error: true
 
 
 
