--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -87,7 +87,7 @@ jobs:
           fail-on: config
           slither-version: dev-triage-db
           slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
-          ignore-compile: true
+#          ignore-compile: true
           continue-on-error: true
 
 
