--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -78,7 +78,19 @@ jobs:
       - name: Install Slither
         run: pip3 install slither-analyzer
 
-      - name: Run Slither.
+      # - name: Run Slither.
+      #   uses: crytic/slither-action@v0.3.1
+      #   id: slither
+      #   with:
+      #     target: packages/tokamak/contracts-bedrock
+      #     slither-config: packages/tokamak/contracts-bedrock/slither.config.json
+      #     fail-on: config
+      #     slither-version: dev-triage-db
+      #     slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
+      #     ignore-compile: true
+      #     continue-on-error: true
+
+      - name: Run Slither
         uses: crytic/slither-action@v0.3.1
         id: slither
         with:
@@ -86,11 +98,9 @@ jobs:
           slither-config: packages/tokamak/contracts-bedrock/slither.config.json
           fail-on: config
           slither-version: dev-triage-db
-          slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
-#          ignore-compile: true
+          slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json --filter-paths packages/tokamak/contracts-bedrock/src/L1
+          ignore-compile: true
           continue-on-error: true
-
-
 
 
 
