--- a/packages/contracts-bedrock/slither.config.json
+++ b/packages/contracts-bedrock/slither.config.json
@@ -5,6 +5,6 @@
   "exclude_low": true,
   "exclude_optimization": true,
   "fail_on": "none",
-  "filter_paths": "(src/vendor|src/cannon/MIPS.sol|src/EAS/EAS.sol)",
+  "filter_paths": "(src/vendor|src/cannon/MIPS.sol|src/EAS/EAS.sol|scripts|test)",
   "foundry_out_directory": "artifacts"
 }
