--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -9,6 +9,7 @@ env:
   PYTEST_ADDOPTS: "--color=yes"
   SOLCVER: 0.8.15
 
+
 jobs:
   slither:
     name: Slither run
@@ -24,6 +25,23 @@ jobs:
 
       - name: Update npm
         run: npm install -g npm@latest
+
+      - name: Copy foundry from Docker container
+        run: |
+          container_id=$(docker create onthertech/titan-ci-builder:latest)
+          mkdir -p $HOME/bin
+          docker cp $container_id:/usr/local/bin/cast $HOME/bin/
+          docker cp $container_id:/usr/local/bin/anvil $HOME/bin/
+          docker cp $container_id:/usr/local/bin/forge $HOME/bin/
+          docker rm $container_id
+
+      - name: Set permissions_add PATH
+        run: |
+          chmod +x $HOME/bin/*
+          echo "$HOME/bin" >> $GITHUB_PATH
+
+      - name: Build the contracts
+        run: forge build --build-info
 
       - name: Get pnpm cache directory path
         id: pnpm-cache-dir-path
@@ -53,8 +71,26 @@ jobs:
         with:
           python-version: '3.8'
 
+      # - name: Install solc-select and solc
+      #   run: |
+      #     pip3 install solc-select
+      #     solc-select install 0.8.15
+      #     solc-select use 0.8.15
+
       - name: Install Slither
         run: pip3 install slither-analyzer
+
+#       - name: Run Slither.
+#         uses: crytic/slither-action@v0.3.1
+#         id: slither
+#         with:
+#           target: packages/tokamak/contracts-bedrock
+#           slither-config: packages/tokamak/contracts-bedrock/slither.config.json
+#           fail-on: config
+#           slither-version: dev-triage-db
+#           slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
+#           ignore-compile: true
+#           continue-on-error: true
 
       - name: Run Slither
         uses: crytic/slither-action@v0.3.1
@@ -66,3 +102,4 @@ jobs:
           slither-version: dev-triage-db
           slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
           continue-on-error: true
+
