--- a/.github/workflows/slitherOP.yml
+++ b/.github/workflows/slitherOP.yml
@@ -12,10 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
+      - name: Copy pnpm-lock.yaml
+        run: cp pnpm-lock.yaml packages/tokamak/contracts-bedrock/
 
       - name: Install Slither
         run: pip3 install slither-analyzer
