--- a/.github/workflows/slither-check.yml
+++ b/.github/workflows/slither-check.yml
@@ -10,10 +10,7 @@ jobs:
     name: Slither run
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+      - uses: actions/checkout@v3
 
       - name: Copy pnpm-lock.yaml
         run: cp pnpm-lock.yaml packages/tokamak/contracts-bedrock/
