--- a/.github/workflows/slither-monorepo.yml
+++ b/.github/workflows/slither-monorepo.yml
@@ -55,4 +55,9 @@ jobs:
     - name: Run Slither
       uses: crytic/slither-action@v0.3.1
       with:
+        target: packages/tokamak/contracts-bedrock
+        slither-config: packages/tokamak/contracts-bedrock/slither.config.json
+        fail-on: config
+        slither-version: dev-triage-db
+        slither-args: --triage-database packages/tokamak/contracts-bedrock/slither.db.json
         ignore-compile: true
