--- a/.github/workflows/slither-monorepo.yml
+++ b/.github/workflows/slither-monorepo.yml
@@ -35,7 +35,9 @@ jobs:
         echo "$HOME/bin" >> $GITHUB_PATH
 
     - name: Get pnpm cache directory path
-      run: echo "::set-output name=dir::$(pnpm config get cache)"
+      run: |
+        cache_dir=$(pnpm config get cache || echo "./.pnpm-cache")
+        echo "::set-output name=dir::$cache_dir"
       id: pnpm-cache-dir-path
 
     - name: Cache pnpm modules
