--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       args:
         GIT_COMMIT: "dev"
         GIT_DATE: "0"
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
+    image: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
     entrypoint: ["echo", "build complete"]
 
   l1:
@@ -65,8 +65,8 @@ services:
       context: ../
       dockerfile: ./op-node/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:devnet
+        OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
+    image: onthertech/titan-op-node:${IMAGE_TAG:-latest}
     command: >
       op-node
       --l1=ws://l1:8546
@@ -113,8 +113,8 @@ services:
       context: ../
       dockerfile: ./op-proposer/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-proposer:devnet
+        OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
+    image: onthertech/titan-op-proposer:${IMAGE_TAG:-latest}
     ports:
       - "6062:6060"
       - "7302:7300"
@@ -142,8 +142,8 @@ services:
       context: ../
       dockerfile: ./op-batcher/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-batcher:devnet
+        OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
+    image: onthertech/titan-op-batcher:${IMAGE_TAG:-latest}
     ports:
       - "6061:6060"
       - "7301:7300"
