--- a/packages/contracts-bedrock/slither.config.json
+++ b/packages/contracts-bedrock/slither.config.json
@@ -1,10 +1,15 @@
 {
-  "detectors_to_exclude": "arbitrary-send-eth,incorrect-equality,naming-convention,solc-version",
-  "exclude_dependencies": true,
+  "detectors_to_exclude": "incorrect-shift-in-assembly",
+  "fail_high": true,
+  "fail_pedantic": false,
+  "exclude_optimization": true,
   "exclude_informational": true,
   "exclude_low": true,
-  "exclude_optimization": true,
-  "fail_on": "none",
-  "filter_paths": "(src/vendor|src/cannon/MIPS.sol|src/EAS/EAS.sol)",
+  "exclude_medium": true,
+  "solc_disable_warnings": false,
+  "hardhat_ignore_compile": false,
+  "disable_color": false,
+  "exclude_dependencies": true,
+  "filter_paths": "test,src/vendor,lib,src/cannon/MIPS.sol",
   "foundry_out_directory": "artifacts"
 }
