OR-1450 update base image for op-geth

--- a/ops-bedrock/Dockerfile.l2
+++ b/ops-bedrock/Dockerfile.l2
@@ -1,4 +1,4 @@
-FROM us-docker.pkg.dev/oplabs-tools-artifacts/images/op-geth:optimism
+FROM onthertech/titan-op-geth:nightly
 
 RUN apk add --no-cache jq
 
