--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 export FORK_PUBLIC_NETWORK=true
-export L1_RPC=https://eth-pokt.nodies.app
+export L1_RPC=https://eth-mainnet.g.alchemy.com/v2/
 export FROM_BLOCK_NUMBER=19419593
 export IMPL_SALT='tokamak network'
 export L2_NATIVE_TOKEN=0x2be5e8c109e2197D077D13A82dAead6a9b3433C5
