--- a/packages/tokamak/contracts-bedrock/foundry.toml
+++ b/packages/tokamak/contracts-bedrock/foundry.toml
@@ -13,6 +13,8 @@ optimizer_runs = 999999
 remappings = [
   '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts',
   '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts',
+  '@openzeppelin/contracts_v3.1.0/=lib/openzeppelin-contracts_v3.1.0/contracts',
+  '@openzeppelin/contracts_v5.0.1/=lib/openzeppelin-contracts_v5.0.1/contracts',
   '@rari-capital/solmate/=lib/solmate',
   '@cwia/=lib/clones-with-immutable-args/src',
   'forge-std/=lib/forge-std/src',
