feat: running devnet with two modes

--- a/ops-bedrock/Dockerfile.l1.fork
+++ b/ops-bedrock/Dockerfile.l1.fork
@@ -1,4 +1,4 @@
-FROM ghcr.io/foundry-rs/foundry:latest
+FROM ghcr.io/foundry-rs/foundry:nightly-293fad73670b7b59ca901c7f2105bf7a29165a90
 
 RUN apk add --no-cache jq
 RUN apk add --update python3 py3-pip
