--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -29,13 +29,14 @@ services:
       - "8545:8545"
       - "8546:8546"
       - "7060:6060"
+      - "9999:9999"
     volumes:
       - "l1_data:/db"
       - "${PWD}/../.devnet/genesis-l1.json:/genesis.json"
       - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
     environment:
       GETH_MINER_RECOMMIT: 100ms
-      FROM_BLOCK_NUMBER: ${FROM_BLOCK_NUMBER}
+      BLOCK_NUMBER: ${BLOCK_NUMBER}
       L1_RPC: ${L1_RPC}
 
   l2:
@@ -47,6 +48,7 @@ services:
     ports:
       - "9545:8545"
       - "8060:6060"
+      - "8551:8551"
     volumes:
       - "l2_data:/db"
       - "${PWD}/../.devnet/genesis-l2.json:/genesis.json"
@@ -70,8 +72,10 @@ services:
         OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
     image: onthertech/titan-op-node:${IMAGE_TAG:-latest}
     command: >
+      /bin/sh -c "while ! nc -z l1 ${WAITING_L1_PORT:-8545}; do sleep 1; done; echo 'Port is now available' &&
       op-node
       --l1=http://l1:8545
+      --l1.fork-public-network=${L1_FORK_PUBLIC_NETWORK:-false}
       --l2=http://l2:8551
       --l2.jwt-secret=/config/test-jwt-secret.txt
       --sequencer.enabled
@@ -93,6 +97,7 @@ services:
       --metrics.port=7300
       --pprof.enabled
       --rpc.enable-admin
+      --l1.trustrpc"
     ports:
       - "7545:8545"
       - "9003:9003"
@@ -104,6 +109,9 @@ services:
       - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
       - "${PWD}/../.devnet/rollup.json:/rollup.json"
       - op_log:/op_log
+    environment:
+      L1_FORK_PUBLIC_NETWORK: "${L1_FORK_PUBLIC_NETWORK}"
+      WAITING_L1_PORT: "${WAITING_L1_PORT}"
 
   op-proposer:
     depends_on:
@@ -121,6 +129,8 @@ services:
       - "6062:6060"
       - "7302:7300"
       - "6546:8545"
+    command: >
+      /bin/sh -c "while ! nc -z op-node 8545 ; do sleep 1; done; echo 'op-node is now available' && op-proposer"
     environment:
       OP_PROPOSER_L1_ETH_RPC: http://l1:8545
       OP_PROPOSER_ROLLUP_RPC: http://op-node:8545
@@ -133,6 +143,8 @@ services:
       OP_PROPOSER_METRICS_ENABLED: "true"
       OP_PROPOSER_ALLOW_NON_FINALIZED: "true"
       OP_PROPOSER_RPC_ENABLE_ADMIN: "true"
+    volumes:
+      - "${PWD}/wait-for-it.sh:/wait-for-it.sh:ro"
 
   op-batcher:
     depends_on:
@@ -150,6 +162,8 @@ services:
       - "6061:6060"
       - "7301:7300"
       - "6545:8545"
+    command: >
+      /bin/sh -c "while ! nc -z op-node 8545 ; do sleep 1; done; echo 'op-node is now available' && op-batcher"
     environment:
       OP_BATCHER_L1_ETH_RPC: http://l1:8545
       OP_BATCHER_L2_ETH_RPC: http://l2:8545
@@ -164,6 +178,8 @@ services:
       OP_BATCHER_METRICS_ENABLED: "true"
       OP_BATCHER_RPC_ENABLE_ADMIN: "true"
       OP_BATCHER_BATCH_TYPE: 0
+    volumes:
+      - "${PWD}/wait-for-it.sh:/wait-for-it.sh"
 
   artifact-server:
     depends_on:
