Updated op-bidings/gen/main.go so it can support both artifacts

--- a/op-bindings/Makefile
+++ b/op-bindings/Makefile
@@ -3,6 +3,8 @@ SHELL := /usr/bin/env bash
 pkg := bindings
 monorepo-base := $(shell dirname $(realpath .))
 contracts-dir := $(monorepo-base)/packages/tokamak/contracts-bedrock
+hardhat-artifacts-dir := $(monorepo-base)/packages/tokamak/contracts-bedrock
+
 
 all: version mkdir bindings
 
@@ -20,8 +22,10 @@ bindings: compile bindings-build
 bindings-build:
 	go run ./gen/main.go \
 		-forge-artifacts $(contracts-dir)/forge-artifacts \
+		-hardhat-artifacts $(hardhat-artifacts-dir)/hardhat-artifacts \
 		-out ./bindings \
-		-contracts ./artifacts.json \
+		-forge-contracts ./artifacts.json \
+		-hardhat-contracts ./artifacts-hardhat.json \
 		-source-maps MIPS,PreimageOracle \
 		-package $(pkg) \
 		-monorepo-base $(monorepo-base)
